Fix unreachable content on Safari

--- a/src/components/menu/components/menu/Menu.scss
+++ b/src/components/menu/components/menu/Menu.scss
@@ -217,6 +217,8 @@
     height: 100vh;
     z-index: 99;
 
+    display: none;
+
     overflow: hidden;
 
     cursor: pointer;
